Closed Bug 220203 Opened 22 years ago Closed 22 years ago

[FIX]Server sent encoding headers ignored since Mozilla 1.5

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.6alpha

People

(Reporter: robi74, Assigned: bzbarsky)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5) Gecko/20030916 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5) Gecko/20030916 It seems Mozilla ignores encoding headers sent by web server (Apache+PHP on Linux and Windows). If PHP page sends header "CONTENT-TYPE: text/html; CHARSET=UTF-8" then encoding is ignored by Mozilla even if the page includes |meta http-equiv="Content-Type" content="text/html; charset=UTF-8"|, result is displaying wrong international characters. If header is changed to "Content-type: text/html; charset=utf-8" (mind the upper/lowercase differences) then Mozilla switches to correct enoding. Reproducible: Always Steps to Reproduce: 1. write a PHP page, starting with header("CONTENT-TYPE: text/html; charset=UTF-8") 2. for output write some ie. latin characters 3. open in browser Actual Results: Browser displayed wrong characters instead of latin2 ones. Automatic page encoding was ignored. Manual switching works. Expected Results: Automaticaly display page as UTF-8 instead 8859-1.
Correction of steps to reproduce: It seems only word "CHARSET" is ignored by that case so: <br> header("CONTENT-TYPE: text/html; charset=UTF-8") WORKS <br> header("CONTENT-TYPE: text/html; CHARSET=UTF-8") DOESN'T WORK
->Networking:HTTP
Assignee: general → darin
Component: Browser-General → Networking: HTTP
QA Contact: general → httpqa
Confirming based on code inspection. Patch coming up.
Assignee: darin → bzbarsky
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P2
Summary: Server sent encoding headers ignored since Mozilla 1.5 → [FIX]Server sent encoding headers ignored since Mozilla 1.5
Target Milestone: --- → mozilla1.6alpha
Attached patch PatchSplinter Review
Attachment #132122 - Flags: superreview?(darin)
Attachment #132122 - Flags: review?(dougt)
Attachment #132122 - Flags: review?(dougt) → review+
Comment on attachment 132122 [details] [diff] [review] Patch sr=darin :)
Attachment #132122 - Flags: superreview?(darin) → superreview+
Fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: