Look for charset param on content type with a case-insensitive search.  Bug 220203, r=timeless, sr=darin